# HookedBackend

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
HookedBackend/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: models.py  movies.json  serializers.py  views.py  whole.json
core/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
staticfiles/css/: main.5fe25a30.50da3a94e9e2.css  main.5fe25a30.css.d2d9b0a40d3b.map
staticfiles/js/: main.dffccd92.js.LICENSE.txt
