[tool.poetry]
name = "HookedBackend"
version = "1"
description = ""
authors = ["IiroKarppanen <iiro.karppanen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref= "^3.5.2"
certifi= "^2022.6.15"
charset-normalizer= "^2.1.0"
dj-database-url= "^1.0.0"
Django= "^4.0.3"
django-cors-headers= "^3.13.0"
djangorestframework= "^3.13.1"
djangorestframework-simplejwt= "^4.8.0"
gunicorn= "^20.1.0"
idna= "^3.3"
psycopg2= "^2.9.3"
PyJWT= "^2.4.0"
python-dotenv= "^0.20.0"
requests= "^2.28.1"
sqlparse= "^0.4.2"
tzdata= "^2022.1"
urllib3= "^1.26.11"
whitenoise= "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
